# ummIDE

./: .flatpak-build.sh  .gitignore  CONTRIBUTING.md  FLATHUB_CHECKLIST.md  FONT_THEME_SETUP.md  README.md  get-deno-sha256.sh  meson.build  net.bloupla.ummide.json
data/: net.bloupla.ummide.desktop  net.bloupla.ummide.metainfo.xml  umjunsik.lang  ummide.gresource.xml
screenshots/: .gitkeep
src/: editor.c  editor.h  main.c  runner.c  runner.h  window.c  window.h
